test/libsolidity/syntaxTests/errors/file_level.sol
error MyError();
error MyError2(uint x);
contract C {
    error MyError3(uint x, bytes);
}
// ----
